--- a/src/Layout/Header/header.module.scss
+++ b/src/Layout/Header/header.module.scss
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media (max-width: 660px) {
+    flex-direction: column;
+    .logo {
+      padding-bottom: 0;
+    }
+  }
 }
 
 .logo {
