--- a/src/components/CurrentPizza/currentpizza.module.scss
+++ b/src/components/CurrentPizza/currentpizza.module.scss
@@ -1,9 +1,13 @@
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
 .pizza_card {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  //width: 280px;
-  //height: 460px;
+  max-width: 280px;
+  //justify-self: center;
 }
 
 .image {
@@ -24,22 +28,30 @@
   margin-top: 22px;
   background-color: #f3f3f3;
   border-radius: 10px;
-  ul {
+  .types,
+  .sizes {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin: 7px 6px;
-    .active {
-      background-color: #fff;
-    }
+
     li {
+      flex-basis: 0;
+      flex-grow: 1;
+      //align-items: center;
       border-radius: 10px;
       padding: 10px 18px;
-      //align-items: center;
-      //align-self: center;
       font-size: 14px;
       font-weight: 700;
-      margin: 0px;
       cursor: pointer;
+      p {
+        padding: 0;
+        margin: 0;
+        text-align: center;
+      }
     }
   }
+}
+
+.active {
+  background-color: #fff;
 }
