--- a/src/components/Pizzas/pizzas.module.scss
+++ b/src/components/Pizzas/pizzas.module.scss
@@ -1,12 +1,24 @@
 .wrapper {
   padding: 32px 50px 96px 67px;
 }
-
+.title {
+  font-size: 32px;
+  font-weight: 700;
+}
 .cards {
+  //max-width: 460px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  //grid-template-rows: 2fr;
   grid-column-gap: 35px;
   grid-row-gap: 65px;
   margin-top: 35px;
+  @media (max-width: 1340px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: 1100px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: 730px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
