--- a/src/pages/Products/products.module.scss
+++ b/src/pages/Products/products.module.scss
@@ -11,7 +11,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 50px 32px 67px;
+  margin: 0 50px 0px 67px;
+  @media (max-width: 1080px) {
+    flex-direction: column;
+  }
+  @media (max-width: 720px) {
+    flex-direction: column;
+    .categories {
+      width: 100%;
+      overflow: scroll;
+    }
+  }
 }
 
 .category {
@@ -32,13 +42,19 @@
   font-weight: 700;
   padding: 14px 20px;
 }
-
+.sort_wrapper {
+  position: relative;
+}
 .sort {
   display: inline-flex;
   gap: 8px;
+  align-items: center;
+  p {
+    font-size: 14px;
+  }
 }
 
-.select {
+.choice {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -49,6 +65,27 @@
   color: #fe5f1e;
   font-size: 14px;
   font-weight: 400;
+  border-bottom: 1px dotted #fe5f1e;
+}
 
-  //border-bottom: 1px dotted #fe5f1e;
+.sort_list {
+  position: absolute;
+  right: 0;
+  background-color: #fff;
+  box-shadow: 0px 5px 15px 0px #00000017;
+  border-radius: 10px;
+  width: 132px;
+  height: 136px;
+  font-size: 14px;
+}
+
+.active_sort {
+  color: #fe5f1e;
+  font-weight: 700;
+  background: #fe5f1e0d;
+}
+
+.sort__list_item {
+  padding: 10px 14px;
+  cursor: pointer;
 }
