--- a/src/components/CurrentPizza/currentpizza.module.scss
+++ b/src/components/CurrentPizza/currentpizza.module.scss
@@ -55,3 +55,53 @@
 .active {
   background-color: #fff;
 }
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.button {
+  display: inline-flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 8px;
+  background-color: #fff;
+  min-width: 132px;
+  height: 40px;
+  border-radius: 30px;
+  border: 1px solid #eb5a1e;
+  color: #eb5a1e;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
+  svg {
+    width: 18px;
+    height: 18px;
+    fill: #eb5a1e;
+  }
+  span {
+    color: #fff;
+    background-color: #eb5a1e;
+    font-size: 13px;
+    padding: 4px 8px;
+    border-radius: 50%;
+  }
+  &:hover {
+    color: #fff;
+    background-color: #eb5a1e;
+    svg {
+      fill: #fff;
+    }
+    span {
+      background-color: #fff;
+      color: #eb5a1e;
+    }
+  }
+}
