--- a/src/pages/Cart/cart.module.scss
+++ b/src/pages/Cart/cart.module.scss
@@ -1,5 +1,5 @@
 .empty_wrapper {
-  padding: 44px 0 164px;
+  padding: 24px 0 164px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -18,13 +18,13 @@
 }
 
 .image {
-  margin: 48px auto 0;
+  margin: 40px auto 0;
   height: 255px;
-  width: 300px;
+  width: 250px;
 }
 
 .button {
-  margin: 74px auto 0;
+  margin: 64px auto 0;
   background-color: #282828;
   color: #fff;
   width: 210px;
@@ -65,6 +65,7 @@
   gap: 7px;
   color: #b6b6b6;
   align-items: center;
+  cursor: pointer;
   img {
     width: 20px;
     height: 20px;
