--- a/src/components/CurrentPizza/currentpizza.module.scss
+++ b/src/components/CurrentPizza/currentpizza.module.scss
@@ -7,7 +7,11 @@
   flex-direction: column;
   justify-content: center;
   max-width: 280px;
-  //justify-self: center;
+  .link {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+  }
 }
 
 .image {
